# tinyclaw

./: .gitignore  .vercelignore  Cargo.toml  README.md  vercel.json
examples/: custom_channel.rs  custom_memory.rs  custom_provider.rs  custom_tool.rs
site/: index.html
src/: identity.rs  lib.rs  main.rs  migration.rs  session.rs  util.rs
src/agent/: loop_.rs
src/channels/: discord.rs  email_channel.rs  irc.rs  mod.rs  telegram.rs  whatsapp.rs
src/config/: mod.rs  schema.rs
src/cron/: mod.rs
src/daemon/: mod.rs
src/doctor/: mod.rs
src/gateway/: mod.rs
src/heartbeat/: engine.rs
src/integrations/: mod.rs
src/observability/: mod.rs  otel.rs
src/onboard/: wizard.rs
src/providers/: anthropic.rs  compatible.rs  gemini.rs  mod.rs  ollama.rs  openai.rs  openrouter.rs  reliable.rs  router.rs  traits.rs
src/runtime/: docker.rs  native.rs
src/security/: secrets.rs
src/service/: mod.rs
src/skillforge/: integrate.rs  mod.rs  scout.rs
src/skills/: mod.rs
src/tools/: composio.rs  file_patch.rs  file_read.rs  file_write.rs  image_info.rs  mod.rs  search_files.rs  shell.rs  web_fetch.rs
src/tui/: app.rs  markdown.rs  mod.rs
tests/: dockerignore_test.rs  memory_comparison.rs  whatsapp_webhook_security.rs
